--- a/styles/home.css
+++ b/styles/home.css
@@ -120,6 +120,91 @@
 
 .experience-body {
     display: flex;
+    justify-content: space-between;
+}
+
+.lead {
+    font-size: 24px;
+    color: var(--primary-color);
+}
+
+.dot {
+    font-size: 12px;
+    color: var(--primary-color);
+}
+
+/* left section */
+
+.senior-engineer, 
+.engineer {
+    font-size: 18px;
+}
+
+.description__one, 
+.description__three {
+    font-size: 18px;
+    padding: 30px 0;
+    width: 55%;
+    /* background-color: blue; */
+}
+
+.description__two {
+    font-size: 18px;
+    padding: 30px 0;
+}
+
+/* middle section */
+
+.fa-one {
+    position: absolute !important;
+    top: 1160px;
+    left: 700px;
+    font-size: 20px;
+    color: var(--primary-color);
+}
+
+.fa-two {
+    position: absolute !important;
+    top: 1820px;
+    left: 700px;
+    font-size: 20px;
+    color: var(--primary-color);
+}
+
+.fa-three {
+    position: absolute !important;
+    top: 1490px;
+    left: 700px;
+    font-size: 20px;
+    color: var(--primary-color);
+}
+
+.line svg{
+    position: absolute;
+    top: 1160px;
+    left: 710px;
+}
+
+/* Year */
+
+.year__2019 {
+    font-size: 64px;
+    padding-top: 120px;
+    padding-bottom: 210px;
+    text-align: left;
+} 
+
+.year__2020 {
+    font-size: 64px;
+    padding: 120px;
+    text-align: right;
+    width: 70%;
+    padding-bottom: 200px;
+}
+
+.year__2021 {
+    font-size: 64px;
+    padding-top: 175px;
 }
 
 /* Projects */
@@ -217,8 +302,11 @@
     color: var(--primary-color);
     padding: 5px 15px;
     border-radius: 72px;
-    margin: 100px 0 ;
     margin-right: 8px;
+}
+
+.new-line {
+    margin-top: 20px;
 }
 
 .other-technologies a {
