--- a/styles/contact.css
+++ b/styles/contact.css
@@ -176,7 +176,7 @@ textarea::placeholder {
     margin: 80px auto 30px auto;
 }
 
-.submit input {
+#submit {
     border-radius: 50px;
     padding: 15px 137px;
     border: none;
@@ -186,7 +186,7 @@ textarea::placeholder {
     transition: var(--transition-03);
 }
 
-.submit input:hover {
+#submit:hover {
     cursor: pointer;
     box-shadow: var(--linear-gradient-hover-box-shadow);
 }
