--- a/styles/app-projects.css
+++ b/styles/app-projects.css
@@ -115,17 +115,17 @@
     width: 250px;
 } 
 
-.column-hr {
+.project-hr {
     margin: 30px 0;
     border: none;
     border-top: 0.2px solid var(--hr-color);
 }
 
-.project-hr {
+/* .project-hr {
     margin-bottom: 30px 0;
     border: none;
     border-top: 0.2px solid var(--hr-color);
-}
+} */
 
 /* PROJECT BUILD APPEND */
 
