updates to mobile__v--home brach that will be merged with the main branch

--- a/styles/home.css
+++ b/styles/home.css
@@ -8,6 +8,15 @@
     align-items: center;
 }
 
+
+/* nav-mob */
+
+.hamburger, 
+.times-burger,
+.mobile-menu {
+    display: none;
+}
+
 .name {
     font-size: 35px;
     line-height: 41.99px;
