--- a/styles/app-projects.css
+++ b/styles/app-projects.css
@@ -38,9 +38,10 @@
 
 .filter__by {
     font-size: 20px;
+    margin-right: 40px;
 }
 
-.complete {
+/* .complete {
     margin: 0 5px 0 40px;
     width: 151px;
     height: 37px;
@@ -49,14 +50,23 @@
     border-radius: 55px;
     background: var(--linear-gradient);
     transition: var(--transition-03);
-}
+} */
 
-.complete:hover {
+/* .complete:hover {
     box-shadow: var(--linear-gradient-hover-box-shadow);
     cursor: pointer;
+} */
+
+.place_holding {
+    position: absolute;
+    top: 340px;
+    left: 330px;
+    font-size: 380px;
+    color: var(--primary-offset-color);
+
 }
 
-.in__progress {
+.inactive {
     margin: 0 0 0 5px;
     font-size: 16px;
     width: 151px;
@@ -65,9 +75,11 @@
     border-radius: 55px;
     background-color: var(--background-color);
     color: var(--primary-color);
+    transition: var(--transition-01);
 }
 
-.in__progress:hover {
+.inactive:hover {
+    border: solid 3px;
     cursor: pointer;
 
     /* project list heading */
@@ -146,6 +158,10 @@
     font-size: 20px;
 }
 
+.project__item {
+    font-size: 20px;
+}
+
 .project__made--at {
     margin: 0 10px 0 0;
     width: 170px;
@@ -154,9 +170,20 @@
 }
 
 .project__build--by {
+    display: flex;
+    flex-wrap: wrap;
+    width: 390px;
     margin: 0 10px 0 0;
     width: 390px;
+}
+
+.build_item {
+    background-color: var(--primary-offset-color);
+    color: var(--primary-color);
+    padding: 10px 18px;
+    border-radius: 20px;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .project__link {
@@ -164,13 +191,14 @@
     font-size: 20px;
 }
 
-.project__link a {
+.project__link_a {
+    cursor: pointer;
     color: var(--tertiary-color);
 }
 
 /* build_by_link */
 
-.build_by_link {
+/* .build_by_link {
     background-color: var(--primary-offset-color);
     color: var(--primary-color);
     padding: 10px 18px;
@@ -181,8 +209,8 @@
     display: flex;
     flex-wrap: wrap;
     width: 390px;
-}
+} */
 
-.project__build--by div {
+.bic {
     margin: 0 10px 30px 0;
 }
